[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "qsar-package"
dynamic = ["version"]
authors = [
  { name="João Paulo Ataíde Martins", email="joaopauloam@gmail.com" },
  { name="Heliton Martins", email="helitonmrf@gmail.com" },
]
description = "QSAR analysis in Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["Click==7.0", "openbabel", "rdkit", "numpy==1.16.4", "pandas==0.24.2", "ambertools", "OpenMM==7.4.1"]


[project.urls]
Homepage = "https://github.com/LQCAPF/QSARpackage"
Issues = "https://github.com/LQCAPF/QSARpackage/issues"


[tool.hatch.build.targets.sdist]
only-include = [
  "qsar-package/lqtagrid",
  "qsar-package/lqtagrid_4d",
  "qsar-package/md",
]
exclude = [
  "*.ipynb",
]


[tool.hatch.build.targets.wheel]
packages = ["qsar-package"]


[tool.hatch.version]
path = "./__about__.py"