[project]
name = "qsar-package"
dynamic = ["version"]
authors = [
  { name = "João Paulo Ataíde Martins", email = "joaopauloam@gmail.com" },
  { name = "Heliton Martins", email = "helitonmrf@gmail.com" },
]
description = "QSAR analysis in Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [ ]


[project.urls]
Homepage = "https://github.com/LQCAPF/QSARpackage"
Issues = "https://github.com/LQCAPF/QSARpackage/issues"
